--- a/style.css
+++ b/style.css
@@ -54,15 +54,14 @@ header {
   gap: 2vh;
   padding-left: 5vh;
 
-} nav a {
+} header >  nav a {
 
   text-decoration: none;
   color: var(--text);
   transition: padding 1s;
   padding: 1vh 0;
-  
 
-} nav a:hover {
+} header nav a:hover {
 
   color: var(--bold);
   padding: 1vh 3vh;
@@ -280,6 +279,124 @@ footer {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.about {
+
+  height: 75vh;
+  padding-top: 15vh;
+  display: flex;
+  
+} .about nav {
+
+  width: 15%;
+  border-right: 1px solid var(--text);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+} .about nav p {
+
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-top: 4vh;
+
+} .about .card { 
+
+  width: 50%;
+  margin: 0 10vh;
+
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+#P01 h2, #P02 h2, #P03 h2, #P04 h2, #P05 h2 {
+  padding-bottom: 4vh;
+}
+
+
+
+
+
+.about nav li {
+
+  list-style-type: none;
+  padding: 0.25vh 0 0.25vh 3vh;
+
+  cursor: pointer;
+
+} .about nav li:hover {
+
+  color: var(--bold);
+
+}
+
+
+#P01 ul {
+
+  padding: 2vh 0 0 6vh;
+
+}
+
+#P02 ul {
+
+  padding: 6vh 0 0 6vh;
+
+}
+
+#P01 ul li, #P02 ul li {
+
+  padding-bottom: 2vh;
+}
+
+#P03 img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+#P03 ul {
+  list-style-type: none;
+  display: flex;
+  gap: 2vh;
+  padding-top: 8vh;
+}
+
+#P03 ul li {
+  text-align: center;
+  font-size: 1.5vh;
+}
+
+#P03 > p {
+  padding-bottom: 4vh;
+}
 
 
   @media (max-width: 800px) {
